protox/src/check/snapshots/protox__check__tests__field_default_value.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"\n            message Message {\n                optional float default_float_exp = 23 [ default = 9e6];\n                optional double default_double_exp = 24 [ default = 9e22];\n            }\n        \"#)"
---
name: root.proto
messageType:
  - name: Message
    field:
      - name: default_float_exp
        number: 23
        label: LABEL_OPTIONAL
        type: TYPE_FLOAT
        defaultValue: "9000000"
        jsonName: defaultFloatExp
      - name: default_double_exp
        number: 24
        label: LABEL_OPTIONAL
        type: TYPE_DOUBLE
        defaultValue: "90000000000000000000000"
        jsonName: defaultDoubleExp
sourceCodeInfo:
  location:
    - span:
        - 1
        - 12
        - 4
        - 13
    - path:
        - 4
        - 0
      span:
        - 1
        - 12
        - 4
        - 13
    - path:
        - 4
        - 0
        - 1
      span:
        - 1
        - 20
        - 27
    - path:
        - 4
        - 0
        - 2
        - 0
      span:
        - 2
        - 16
        - 71
    - path:
        - 4
        - 0
        - 2
        - 0
        - 1
      span:
        - 2
        - 31
        - 48
    - path:
        - 4
        - 0
        - 2
        - 0
        - 3
      span:
        - 2
        - 51
        - 53
    - path:
        - 4
        - 0
        - 2
        - 0
        - 4
      span:
        - 2
        - 16
        - 24
    - path:
        - 4
        - 0
        - 2
        - 0
        - 5
      span:
        - 2
        - 25
        - 30
    - path:
        - 4
        - 0
        - 2
        - 0
        - 7
      span:
        - 2
        - 66
        - 69
    - path:
        - 4
        - 0
        - 2
        - 0
        - 8
      span:
        - 2
        - 54
        - 70
    - path:
        - 4
        - 0
        - 2
        - 1
      span:
        - 3
        - 16
        - 74
    - path:
        - 4
        - 0
        - 2
        - 1
        - 1
      span:
        - 3
        - 32
        - 50
    - path:
        - 4
        - 0
        - 2
        - 1
        - 3
      span:
        - 3
        - 53
        - 55
    - path:
        - 4
        - 0
        - 2
        - 1
        - 4
      span:
        - 3
        - 16
        - 24
    - path:
        - 4
        - 0
        - 2
        - 1
        - 5
      span:
        - 3
        - 25
        - 31
    - path:
        - 4
        - 0
        - 2
        - 1
        - 7
      span:
        - 3
        - 68
        - 72
    - path:
        - 4
        - 0
        - 2
        - 1
        - 8
      span:
        - 3
        - 56
        - 73

