protox/src/check/snapshots/protox__check__tests__message_field_json_name.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"message Message {\n        optional int32 field = 1 [json_name = '$FIELD'];\n    }\"#)"
---
{
  "name": "root.proto",
  "messageType": [
    {
      "name": "Message",
      "field": [
        {
          "name": "field",
          "number": 1,
          "label": "LABEL_OPTIONAL",
          "type": "TYPE_INT32",
          "jsonName": "$FIELD"
        }
      ]
    }
  ],
  "sourceCodeInfo": {
    "location": [
      {
        "span": [
          0,
          0,
          2,
          5
        ]
      },
      {
        "path": [
          4,
          0
        ],
        "span": [
          0,
          0,
          2,
          5
        ]
      },
      {
        "path": [
          4,
          0,
          1
        ],
        "span": [
          0,
          8,
          15
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0
        ],
        "span": [
          1,
          8,
          56
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          1
        ],
        "span": [
          1,
          23,
          28
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          3
        ],
        "span": [
          1,
          31,
          32
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          4
        ],
        "span": [
          1,
          8,
          16
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          5
        ],
        "span": [
          1,
          17,
          22
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          8
        ],
        "span": [
          1,
          33,
          55
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          10
        ],
        "span": [
          1,
          34,
          54
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          10
        ],
        "span": [
          1,
          46,
          54
        ]
      }
    ]
  }
}
